force-app/main/default/objects/Employment_Detail__c/Employment_Detail__c.object-meta.xml
<CustomObject>
    <label>Employment Detail</label>
    <nameField>
        <displayFormat>EMP-{0000}</displayFormat>
        <label>Employment Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>