force-app/main/default/objects/Employment_Detail__c/fields/Basic_Salary__c.field-meta.xml
<CustomField>
    <fullName>Basic_Salary__c</fullName>
    <label>Basic Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>