force-app/main/default/objects/Employment_Detail__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <label>Employer Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>