force-app/main/default/objects/Employment_Detail__c/fields/Ovetime__c.field-meta.xml
<CustomField>
    <fullName>Ovetime__c</fullName>
    <label>Ovetime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>